credible-plugin: optimize for memory allocations